--- a/Lecture/Robotics_Lecture_ESSA.tex
+++ b/Lecture/Robotics_Lecture_ESSA.tex
@@ -49,6 +49,7 @@
 \def\vectorD{\bm{d}}
 \def\vectorH{\bm{h}}
 \def\vectorX{\bm{x}}
+\def\vectorXMaj{\bm{X}}
 \def\vectorU{\bm{u}}
 \def\vectorS{\bm{s}}
 \def\vectorY{\bm{y}}
